add new website from server na

--- a/xem-phim-moi/ac-linh-trong-xac-me/index.html
+++ b/xem-phim-moi/ac-linh-trong-xac-me/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1781,84 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dhevaprom-laorchan" title="Dhevaprom Laorchan">
+          <a class="list-top-movie-link" href="/phim-moi/xoa-no" title="Xóa nợ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dhevaprom-laorchan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xoa-no-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dhevaprom Laorchan
+             Xóa nợ
             </span>
             <span class="list-top-movie-item-en">
-             Duangjai  Dhevaprom
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ve-lai-qua-khu" title="Về lại quá khứ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ve-lai-qua-khu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Về lại quá khứ
-            </span>
-            <span class="list-top-movie-item-en">
-             One More Time
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhoc-bheem-qua-cam-phan-2" title="Nhóc Bheem quả cảm (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhoc-bheem-qua-cam-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhóc Bheem quả cảm (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Mighty Little Bheem (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/birdie-wing-cau-chuyen-cua-cac-nu-golf-thu" title="Birdie Wing: Câu Chuyện Của Các Nữ Golf Thủ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/birdie-wing-cau-chuyen-cua-cac-nu-golf-thu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Birdie Wing: Câu Chuyện Của Các Nữ Golf Thủ
-            </span>
-            <span class="list-top-movie-item-en">
-             BIRDIE WING
+             Forgive Us Our Debts
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1869,21 +1803,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ve-si-2" title="Vệ Sĩ 2">
+          <a class="list-top-movie-link" href="/phim-moi/xin-chao-quai-vat-ban-thai" title="Xin Chào Quái Vật (Bản Thái)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ve-si-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xin-chao-quai-vat-ban-thai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vệ Sĩ 2
+             Xin Chào Quái Vật (Bản Thái)
             </span>
             <span class="list-top-movie-item-en">
-             Bodyguard
+             Remember You
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dreamworks-huyen-thoai-bi-kip-luyen-rong" title="DreamWorks: Huyền thoại bí kíp luyện rồng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dreamworks-huyen-thoai-bi-kip-luyen-rong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             DreamWorks: Huyền thoại bí kíp luyện rồng
+            </span>
+            <span class="list-top-movie-item-en">
+             DreamWorks How to Train Your Dragon Legends
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/homecoming-phim-cua-beyonce" title="HOMECOMING: Phim của Beyoncé">
+           <span class="status">
+            Vietsub - HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/homecoming-phim-cua-beyonce-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             HOMECOMING: Phim của Beyoncé
+            </span>
+            <span class="list-top-movie-item-en">
+             HOMECOMING: A film by Beyoncé
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/yellowstone" title="Yellowstone">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yellowstone-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Yellowstone
+            </span>
+            <span class="list-top-movie-item-en">
+             Yellowstone
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
